@@ -21,6 +21,7 @@
 * Dev - Added the groups_admin_groups_handle_action_confirm action.
 * Dev - Added the groups_admin_groups_handle_action_reject action.
 * Dev - Added the groups_admin_groups_handle_bulk_action action.
+* Fix - Resolves performance issues with large sets of groups rendering using the group tree functions, as reported in https://github.com/itthinx/groups/issues/158
 
 2025-08-20 - version 3.6.0
 * Update - WordPress 6.8 compatible.
